--- a/patterns/brand/2-colours.html
+++ b/patterns/brand/2-colours.html
@@ -39,7 +39,11 @@
   <div class="patternbot-font-primary text-left">
 
     <section>
-      <h2 class="patternbot-color-body giga ">Primary colours</h2>
+      <h2 class="patternbot-color-body giga push-1-4">Primary colours</h2>
+        <div class="patternbot-max-length italic max-length">
+          <p>The primary colour represents the boldness of the brand. Use for all body copy, titles and text.</p>
+
+        </div>
 
       <div class="patternbot-color-swatches patternbot-color-swatches-primary grid grid-stretch">
         <div class="unit xs-1-2" style="background-color:var(--color-primary, var(--color-primary))">&nbsp;</div>
@@ -73,7 +77,11 @@
     <section>
       <hr class="patternbot-hr">
 
-      <h2 class="patternbot-color-body giga ">Secondary colours</h2>
+      <h2 class="patternbot-color-body giga push-1-4">Secondary colours</h2>
+        <div class="patternbot-max-length italic max-length">
+          <p>The secondary colour represents food (french fries), the whole theme behind the brand. Use for banners, to highlight pop-up texts.</p>
+
+        </div>
 
       <div class="patternbot-color-swatches patternbot-color-swatches-secondary grid grid-stretch">
         <div class="unit xs-1-2" style="background-color:var(--color-secondary, var(--color-secondary))">&nbsp;</div>
@@ -107,7 +115,11 @@
     <section>
       <hr class="patternbot-hr">
 
-      <h2 class="patternbot-color-body giga ">Accent colours</h2>
+      <h2 class="patternbot-color-body giga push-1-4">Accent colours</h2>
+        <div class="patternbot-max-length italic max-length">
+          <p>The accent colour represents the quirkiness of the brand. Use for buttons, emphasis, links, for an extra pop.</p>
+
+        </div>
       <ul class="patternbot-color-swatch-labels patternbot-color-body patternbot-list-group list-group-inline milli push-0">
           <li class="push">
             <div class="patternbot-color-swatches patternbot-color-swatches-accent push-1-2" style="background-color:var(--color-accent);">&nbsp;</div>
