Basic button styling
Basic buttons were styled

--- a/patterns/brand/2-colours.html
+++ b/patterns/brand/2-colours.html
@@ -140,6 +140,25 @@
               <li class="patternbot-color-swatch-labels-rgba"><code>rgba(255, 90, 90, 1)</code></li>
             </ul>
           </li>
+          <li class="push">
+            <div class="patternbot-color-swatches patternbot-color-swatches-accent push-1-2" style="background-color:var(--color-accent-light);">&nbsp;</div>
+            <div class="push-1-2">
+              <i class="patternbot-color-swatches icon i-24" style="background-color:var(--color-accent-light);">&nbsp;</i>
+              <span class="icon-label">Accent light</span>
+            </div>
+            <ul class="patternbot-code-details patternbot-code-details-under patternbot-list-group list-group micro push-0">
+              <li class="push-1-8 relative">
+                <code>var(--color-accent-light)</code>
+                <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy color: --color-accent-light" aria-label="Copy color: --color-accent-light" data-clipboard-text="var(--color-accent-light)" hidden>
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-copy"></use></svg>
+                  </i>
+                </button>
+              </li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#f9b8b8</code></li>
+              <li class="patternbot-color-swatch-labels-rgba"><code>rgba(249, 184, 184, 1)</code></li>
+            </ul>
+          </li>
       </ul>
     </section>
 
