--- a/index.html
+++ b/index.html
@@ -117,6 +117,16 @@
                     </div>
                   </a>
                 </li>
+                <li role="presentation">
+                  <a class="gutter pad-t-1-4 pad-b-1-4 block" role="tab" aria-controls="icons" href="#icons">
+                    <div class="relative">
+                      <span>Icons</span>
+                      <i class="icon i-18 absolute pin-cr">
+                        <svg><use xlink:href="#icon-active" /></svg>
+                      </i>
+                    </div>
+                  </a>
+                </li>
             <li class="pad-t-1-2" role="presentation">
               <button class="nav-show-all gutter pad-t-1-4 pad-b-1-4 block kilo" id="nav-show-all" aria-pressed="false" title="Show all patterns" aria-label="Show all patterns">
                 <span class="nav-show-all-wrap relative block">Show all</span>
@@ -717,6 +727,276 @@
               <code><pre id="buttons-buttons-code-sample-copy-chunk">&lt;a class="btn" href="#"&gt;Standard button&lt;/a>
 &lt;a class="btn btn-light" href="#">Light button&lt;/a>
 &lt;a class="btn btn-ghost" href="#">Ghost button&lt;/a>
+</pre></code>
+            </div>
+          </div>
+      </div>
+    </div>
+
+</section>
+
+        <section class="pattern" id="icons" role="tabpanel" hidden aria-hidden="true" style="">
+  <div class="pattern-toolbar gutter pad-t-1-4 pad-b-1-8 relative" style="">
+    <h2 class="pattern-name exa push-1-4" style="color: #000;">Icons</h2>
+        <ul class="list-group-inline gutter absolute pin-cr">
+            <li>
+              <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="icons-icons-code-sample">
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-code"></use></svg>
+                </i>
+              </button>
+            </li>
+            <li>
+              <a class="center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/icons/1-icons.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-pop-out"></use></svg>
+                </i>
+              </a>
+            </li>
+        </ul>
+  </div>
+
+
+  
+
+    <div class="pattern-details" id="icons-icons" style="">
+
+      <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
+        <div class="gutter-2 pad-t-1-2 pad-b-1-2">
+          <div class="resizeable-pattern relative" style="">
+            <i class="icon i-48 patternbot-iframe-loading-gears absolute pin-c"><svg><use xlink:href="#patternbot-iframe-loading-gears"></use></svg></i>
+            <iframe data-src="patterns/icons/1-icons.html" scrolling="no" onload="resizeIframe(this)" ></iframe>
+              <div class="resizeable-pattern-length">
+                <div class="resize-handle resize-handle-left" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+                <div class="resize-handle resize-handle-right" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+              </div>
+          </div>
+        </div>
+
+          <div class="pattern-code-wrap gutter pad-t-1-2 pad-b-1-2" hidden aria-hidden="true" id="icons-icons-code-sample" tabindex="-1">
+            <div class="pattern-code relative milli island-1-2" style="">
+              <button class="center-contents-vertical pattern-tool-btn pattern-copy-btn absolute pin-tr" title="Copy code" aria-label="Copy code" data-clipboard-target="#icons-icons-code-sample-copy-chunk" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+              <code><pre id="icons-icons-code-sample-copy-chunk">&lt;svg hidden&gt;
+  &lt;symbol id="icon-copy" viewbox="0 0 256 256">
+    &lt;rect width="125.7" height="27.83" x="65.2" y="175" />
+    &lt;rect width="125.7" height="27.83" x="65.2" y="117.8" />
+    &lt;polygon points="82.9 10 82.9 66.8 107.1 66.8 148.9 66.8 173.1 66.8 173.1 10 82.9 10" />
+    &lt;rect width="219.8" height="207.33" x="18.1" y="38.7" fill="none" stroke-miterlimit="10" stroke-width="20" rx="18.8" ry="18.8" />
+  &lt;/symbol>
+&lt;/svg>
+
+&lt;ul class="patternbot-icon-display patternbot-list-group list-group-inline">
+  &lt;li>
+    &lt;div class="text-center">
+      &lt;div class="patternbot-icon-display-left island-1-2">
+        &lt;i class="icon i-128 block">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#close"/>&lt;/svg>
+          &lt;/i>
+      &lt;/div>
+      &lt;div class="patternbot-icon-display-right center-contents island-1-2">
+        &lt;i class="icon i-64 block push-1-8">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#close"/>&lt;/svg>
+          &lt;/i>
+        &lt;i class="icon i-32 block push-1-8">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#close"/>&lt;/svg>
+          &lt;/i>
+        &lt;i class="icon i-18 block">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#close"/>&lt;/svg>
+          &lt;/i>
+      &lt;/div>
+    &lt;/div>
+    &lt;div class="text-center patternbot-color-body">
+      &lt;i class="icon i-24 patternbot-color-body">
+          &lt;svg>&lt;use xlink:href="../../images/icons.svg#close"/>&lt;/svg>
+        &lt;/i>
+      &lt;span class="icon-label ib">&lt;code class="micro">#close&lt;/code>&lt;/span>
+      &lt;span class="icon-label ib">
+          &lt;button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: close" aria-label="Copy icon: close" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#close&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            &lt;i class="icon i-18 patternbot-color-body">
+              &lt;svg>&lt;use xlink:href="#icon-copy"/>&lt;/svg>
+            &lt;/i>
+          &lt;/button>
+        &lt;/span>
+    &lt;/div>
+  &lt;/li>
+  &lt;li>
+    &lt;div class="text-center">
+      &lt;div class="patternbot-icon-display-left island-1-2">
+        &lt;i class="icon i-128 block">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>
+          &lt;/i>
+      &lt;/div>
+      &lt;div class="patternbot-icon-display-right center-contents island-1-2">
+        &lt;i class="icon i-64 block push-1-8">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>
+          &lt;/i>
+        &lt;i class="icon i-32 block push-1-8">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>
+          &lt;/i>
+        &lt;i class="icon i-18 block">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>
+          &lt;/i>
+      &lt;/div>
+    &lt;/div>
+    &lt;div class="text-center patternbot-color-body">
+      &lt;i class="icon i-24 patternbot-color-body">
+          &lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>
+        &lt;/i>
+      &lt;span class="icon-label ib">&lt;code class="micro">#full-review&lt;/code>&lt;/span>
+      &lt;span class="icon-label ib">
+          &lt;button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: full-review" aria-label="Copy icon: full-review" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#full-review&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            &lt;i class="icon i-18 patternbot-color-body">
+              &lt;svg>&lt;use xlink:href="#icon-copy"/>&lt;/svg>
+            &lt;/i>
+          &lt;/button>
+        &lt;/span>
+    &lt;/div>
+  &lt;/li>
+  &lt;li>
+    &lt;div class="text-center">
+      &lt;div class="patternbot-icon-display-left island-1-2">
+        &lt;i class="icon i-128 block">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#half-review"/>&lt;/svg>
+          &lt;/i>
+      &lt;/div>
+      &lt;div class="patternbot-icon-display-right center-contents island-1-2">
+        &lt;i class="icon i-64 block push-1-8">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#half-review"/>&lt;/svg>
+          &lt;/i>
+        &lt;i class="icon i-32 block push-1-8">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#half-review"/>&lt;/svg>
+          &lt;/i>
+        &lt;i class="icon i-18 block">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#half-review"/>&lt;/svg>
+          &lt;/i>
+      &lt;/div>
+    &lt;/div>
+    &lt;div class="text-center patternbot-color-body">
+      &lt;i class="icon i-24 patternbot-color-body">
+          &lt;svg>&lt;use xlink:href="../../images/icons.svg#half-review"/>&lt;/svg>
+        &lt;/i>
+      &lt;span class="icon-label ib">&lt;code class="micro">#half-review&lt;/code>&lt;/span>
+      &lt;span class="icon-label ib">
+          &lt;button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: half-review" aria-label="Copy icon: half-review" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#half-review&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            &lt;i class="icon i-18 patternbot-color-body">
+              &lt;svg>&lt;use xlink:href="#icon-copy"/>&lt;/svg>
+            &lt;/i>
+          &lt;/button>
+        &lt;/span>
+    &lt;/div>
+  &lt;/li>
+  &lt;li>
+    &lt;div class="text-center">
+      &lt;div class="patternbot-icon-display-left island-1-2">
+        &lt;i class="icon i-128 block">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#review-star"/>&lt;/svg>
+          &lt;/i>
+      &lt;/div>
+      &lt;div class="patternbot-icon-display-right center-contents island-1-2">
+        &lt;i class="icon i-64 block push-1-8">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#review-star"/>&lt;/svg>
+          &lt;/i>
+        &lt;i class="icon i-32 block push-1-8">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#review-star"/>&lt;/svg>
+          &lt;/i>
+        &lt;i class="icon i-18 block">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#review-star"/>&lt;/svg>
+          &lt;/i>
+      &lt;/div>
+    &lt;/div>
+    &lt;div class="text-center patternbot-color-body">
+      &lt;i class="icon i-24 patternbot-color-body">
+          &lt;svg>&lt;use xlink:href="../../images/icons.svg#review-star"/>&lt;/svg>
+        &lt;/i>
+      &lt;span class="icon-label ib">&lt;code class="micro">#review-star&lt;/code>&lt;/span>
+      &lt;span class="icon-label ib">
+          &lt;button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: review-star" aria-label="Copy icon: review-star" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#review-star&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            &lt;i class="icon i-18 patternbot-color-body">
+              &lt;svg>&lt;use xlink:href="#icon-copy"/>&lt;/svg>
+            &lt;/i>
+          &lt;/button>
+        &lt;/span>
+    &lt;/div>
+  &lt;/li>
+  &lt;li>
+    &lt;div class="text-center">
+      &lt;div class="patternbot-icon-display-left island-1-2">
+        &lt;i class="icon i-128 block">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#shopping-bag"/>&lt;/svg>
+          &lt;/i>
+      &lt;/div>
+      &lt;div class="patternbot-icon-display-right center-contents island-1-2">
+        &lt;i class="icon i-64 block push-1-8">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#shopping-bag"/>&lt;/svg>
+          &lt;/i>
+        &lt;i class="icon i-32 block push-1-8">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#shopping-bag"/>&lt;/svg>
+          &lt;/i>
+        &lt;i class="icon i-18 block">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#shopping-bag"/>&lt;/svg>
+          &lt;/i>
+      &lt;/div>
+    &lt;/div>
+    &lt;div class="text-center patternbot-color-body">
+      &lt;i class="icon i-24 patternbot-color-body">
+          &lt;svg>&lt;use xlink:href="../../images/icons.svg#shopping-bag"/>&lt;/svg>
+        &lt;/i>
+      &lt;span class="icon-label ib">&lt;code class="micro">#shopping-bag&lt;/code>&lt;/span>
+      &lt;span class="icon-label ib">
+          &lt;button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: shopping-bag" aria-label="Copy icon: shopping-bag" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#shopping-bag&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            &lt;i class="icon i-18 patternbot-color-body">
+              &lt;svg>&lt;use xlink:href="#icon-copy"/>&lt;/svg>
+            &lt;/i>
+          &lt;/button>
+        &lt;/span>
+    &lt;/div>
+  &lt;/li>
+  &lt;li>
+    &lt;div class="text-center">
+      &lt;div class="patternbot-icon-display-left island-1-2">
+        &lt;i class="icon i-128 block">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#togglenav"/>&lt;/svg>
+          &lt;/i>
+      &lt;/div>
+      &lt;div class="patternbot-icon-display-right center-contents island-1-2">
+        &lt;i class="icon i-64 block push-1-8">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#togglenav"/>&lt;/svg>
+          &lt;/i>
+        &lt;i class="icon i-32 block push-1-8">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#togglenav"/>&lt;/svg>
+          &lt;/i>
+        &lt;i class="icon i-18 block">
+            &lt;svg>&lt;use xlink:href="../../images/icons.svg#togglenav"/>&lt;/svg>
+          &lt;/i>
+      &lt;/div>
+    &lt;/div>
+    &lt;div class="text-center patternbot-color-body">
+      &lt;i class="icon i-24 patternbot-color-body">
+          &lt;svg>&lt;use xlink:href="../../images/icons.svg#togglenav"/>&lt;/svg>
+        &lt;/i>
+      &lt;span class="icon-label ib">&lt;code class="micro">#togglenav&lt;/code>&lt;/span>
+      &lt;span class="icon-label ib">
+          &lt;button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: togglenav" aria-label="Copy icon: togglenav" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#togglenav&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            &lt;i class="icon i-18 patternbot-color-body">
+              &lt;svg>&lt;use xlink:href="#icon-copy"/>&lt;/svg>
+            &lt;/i>
+          &lt;/button>
+        &lt;/span>
+    &lt;/div>
+  &lt;/li>
+&lt;/ul>
 </pre></code>
             </div>
           </div>
