Add the basic icons and main banner
The basic icons and main banner were added

--- a/patterns/icons/1-icons.html
+++ b/patterns/icons/1-icons.html
@@ -41,6 +41,39 @@
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#credit-card" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#credit-card" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#credit-card" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#credit-card" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#credit-card" /></svg>
+        </i>
+        <span class="icon-label ib"><code class="micro">#credit-card</code></span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: credit-card" aria-label="Copy icon: credit-card" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#credit-card&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg><use xlink:href="#icon-copy"></use></svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li>
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
             <svg><use xlink:href="../../images/icons.svg#close" /></svg>
           </i>
         </div>
@@ -228,6 +261,39 @@
         <span class="icon-label ib"><code class="micro">#togglenav</code></span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: togglenav" aria-label="Copy icon: togglenav" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#togglenav&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg><use xlink:href="#icon-copy"></use></svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li>
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#warning" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#warning" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#warning" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#warning" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#warning" /></svg>
+        </i>
+        <span class="icon-label ib"><code class="micro">#warning</code></span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: warning" aria-label="Copy icon: warning" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#warning&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
               <svg><use xlink:href="#icon-copy"></use></svg>
             </i>
