Style the banners

--- a/index.html
+++ b/index.html
@@ -721,6 +721,14 @@
       </nav>
   </div>
 
+    <div class="pattern-desc milli island" >
+      <div class="max-length"><p>The banners help create a visual story and representation of the brand and the collections. There are multiple banner layouts and each serve a purpose</p>
+<p>Main Banner</p>
+<p>The main banners are to be used only in the homepage and helps create a visual impact for the brand and the website. It helps carry across the branding.</p>
+<p>Collection banner</p>
+<p>The collection banners weave a story for the viewers. A new collection, most trending collections can be communicated using this dynamic layout. Can be used on any page to represent collections, collaborations.</p>
+</div>
+    </div>
 
   
 
@@ -774,15 +782,17 @@
               </button>
               <code><pre id="banners-collections-banner-code-sample-copy-chunk">&lt;div class="l-collection-banner" href="#"&gt;
   &lt;div class="relative">
-    &lt;h3>Cheese collection&lt;/h3>
-    &lt;div class="absolute gutter">
-      &lt;img class="img-flex" src="../../images/img-1.jpeg">
-    &lt;/div>
-    &lt;div class="absolute gutter">
-      &lt;img class="img-flex" src="../../images/img-2.jpeg">
-    &lt;/div>
-    &lt;div class="absolute gutter">
-      &lt;img class="img-flex" src="../../images/img-1.jpeg">
+    &lt;h3 class="absolute collection-text">Cheese collection&lt;/h3>
+    &lt;div class="collection-img">
+      &lt;div class="absolute gutter embed embed-2by3">
+        &lt;img class="img-flex embed-item" src="../../images/img-1.jpeg">
+      &lt;/div>
+      &lt;div class="absolute gutter embed embed-2by3">
+        &lt;img class="img-flex embed-item" src="../../images/img-2.jpeg">
+      &lt;/div>
+      &lt;div class="absolute gutter embed embed-2by3">
+        &lt;img class="img-flex embed-item" src="../../images/img-1.jpeg">
+      &lt;/div>
     &lt;/div>
   &lt;/div>
 &lt;/div>
