--- a/patterns/banners/collections-banner.html
+++ b/patterns/banners/collections-banner.html
@@ -15,15 +15,17 @@
 
   <div class="l-collection-banner" href="#">
     <div class="relative">
-    <h3>Cheese collection</h3>
-    <div class="absolute gutter">
-      <img class="img-flex" src="../../images/img-1.jpeg">
-    </div>
-    <div class="absolute gutter">
-      <img class="img-flex" src="../../images/img-2.jpeg">
-    </div>
-    <div class="absolute gutter">
-      <img class="img-flex" src="../../images/img-1.jpeg">
+      <h3 class="absolute collection-text">Cheese collection</h3>
+      <div class="collection-img">
+        <div class="absolute gutter embed embed-2by3">
+          <img class="img-flex embed-item" src="../../images/img-1.jpeg">
+        </div>
+        <div class="absolute gutter embed embed-2by3">
+          <img class="img-flex embed-item" src="../../images/img-2.jpeg">
+        </div>
+        <div class="absolute gutter embed embed-2by3">
+          <img class="img-flex embed-item" src="../../images/img-1.jpeg">
+        </div>
     </div>
   </div>
 
