--- a/patterns/buttons/buttons.html
+++ b/patterns/buttons/buttons.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 
-  <a class="btn" href="#">Standard button</a>
-  <a class="btn btn-light" href="#">Light button</a>
-  <a class="btn btn-ghost" href="#">Ghost button</a>
+  <a class="btn kilo bold" href="#">Standard button</a>
+  <a class="btn btn-light kilo bold" href="#">Light button</a>
+  <a class="btn btn-ghost kilo bold" href="#">Ghost button</a>
 
 </body>
 </html>
