--- a/patterns/icons/1-icons.html
+++ b/patterns/icons/1-icons.html
@@ -36,8 +36,8 @@
     </symbol>
   </svg>
 
-  <ul class="patternbot-icon-display patternbot-list-group list-group-inline">
-    <li>
+  <ul class="patternbot-icon-display patternbot-list-group list-group-inline ">
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -60,17 +60,23 @@
         <i class="icon i-24 patternbot-color-body">
           <svg><use xlink:href="../../images/icons.svg#credit-card" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#credit-card</code></span>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #credit-card
+          </code>
+        </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: credit-card" aria-label="Copy icon: credit-card" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#credit-card&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
       </div>
     </li>
-    <li>
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -93,17 +99,23 @@
         <i class="icon i-24 patternbot-color-body">
           <svg><use xlink:href="../../images/icons.svg#close" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#close</code></span>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #close
+          </code>
+        </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: close" aria-label="Copy icon: close" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#close&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
       </div>
     </li>
-    <li>
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -126,17 +138,23 @@
         <i class="icon i-24 patternbot-color-body">
           <svg><use xlink:href="../../images/icons.svg#full-review" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#full-review</code></span>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #full-review
+          </code>
+        </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: full-review" aria-label="Copy icon: full-review" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#full-review&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
       </div>
     </li>
-    <li>
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -159,17 +177,23 @@
         <i class="icon i-24 patternbot-color-body">
           <svg><use xlink:href="../../images/icons.svg#half-review" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#half-review</code></span>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #half-review
+          </code>
+        </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: half-review" aria-label="Copy icon: half-review" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#half-review&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
       </div>
     </li>
-    <li>
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -192,17 +216,23 @@
         <i class="icon i-24 patternbot-color-body">
           <svg><use xlink:href="../../images/icons.svg#review-star" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#review-star</code></span>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #review-star
+          </code>
+        </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: review-star" aria-label="Copy icon: review-star" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#review-star&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
       </div>
     </li>
-    <li>
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -225,17 +255,23 @@
         <i class="icon i-24 patternbot-color-body">
           <svg><use xlink:href="../../images/icons.svg#shopping-bag" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#shopping-bag</code></span>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #shopping-bag
+          </code>
+        </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: shopping-bag" aria-label="Copy icon: shopping-bag" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#shopping-bag&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
       </div>
     </li>
-    <li>
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -258,17 +294,23 @@
         <i class="icon i-24 patternbot-color-body">
           <svg><use xlink:href="../../images/icons.svg#togglenav" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#togglenav</code></span>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #togglenav
+          </code>
+        </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: togglenav" aria-label="Copy icon: togglenav" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#togglenav&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
       </div>
     </li>
-    <li>
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -291,11 +333,17 @@
         <i class="icon i-24 patternbot-color-body">
           <svg><use xlink:href="../../images/icons.svg#warning" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#warning</code></span>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #warning
+          </code>
+        </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: warning" aria-label="Copy icon: warning" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#warning&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
