Add button to the forms page
Final button was added

--- a/index.html
+++ b/index.html
@@ -1351,7 +1351,9 @@
             &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
               &lt;i class="icon i-16">&lt;svg>&lt;use xlink:href="../../images/icons.svg#close"/>&lt;/svg>&lt;/i>
             &lt;/div>
+
           &lt;/div>
+          &lt;a class="btn push-1-2 milli bold" href="#">PAY &amp; PROCEED&lt;/a>
         &lt;/div>
 
       &lt;/div>
