--- a/patterns/forms/forms.html
+++ b/patterns/forms/forms.html
@@ -328,7 +328,9 @@
               <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
                 <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#close" /></svg></i>
               </div>
+
             </div>
+            <a class="btn push-1-2 milli bold" href="#">PAY &amp; PROCEED</a>
           </div>
 
         </div>
