--- a/index.html
+++ b/index.html
@@ -736,6 +736,7 @@
         <ol class="list-group-inline push-1-4 pad-b-1-4">
             <li><a href="#banners--collections-banner">Collections banner</a></li>
             <li><a href="#banners--main-banners">Main banners</a></li>
+            <li><a href="#banners--product-page">Product page</a></li>
         </ol>
       </nav>
   </div>
@@ -889,6 +890,112 @@
 
   &lt;/div>
   &lt;p class="l-home-banner-text gutter giga pad-top bold">JUNK TRUNK is a quirky clothing store for the foodies amongst us. Wear your favourite dish. &lt;/p>
+&lt;/div>
+</pre></code>
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="pattern-details " id="banners--product-page" style="">
+        <div class="pattern-toolbar pattern-toolbar-inner relative gutter pad-t-1-4 pad-b-1-4" style="">
+          <h3 class="pattern-name tera push-1-8">Product page</h3>
+            <ul class="list-group-inline gutter absolute pin-cr">
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="banners-product-page-code-sample">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-code"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="banners/product-page" hidden>
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-copy"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <a class="btn center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/banners/product-page.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-pop-out"></use></svg>
+                    </i>
+                  </a>
+                </li>
+            </ul>
+        </div>
+
+      <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
+        <div class="gutter-2 pad-t-1-2 pad-b-1-2">
+          <div class="resizeable-pattern relative" style="">
+            <i class="icon i-32 patternbot-iframe-loading-gears absolute pin-c"><svg><use xlink:href="#patternbot-iframe-loading-gears"></use></svg></i>
+            <iframe data-src="patterns/banners/product-page.html" scrolling="no" onload="resizeIframe(this)"  ></iframe>
+              <div class="resizeable-pattern-length">
+                <div class="resize-handle resize-handle-left" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+                <div class="resize-handle resize-handle-right" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+              </div>
+          </div>
+        </div>
+
+          <div class="pattern-code-wrap gutter pad-t-1-2 pad-b-1-2" hidden aria-hidden="true" id="banners-product-page-code-sample" tabindex="-1">
+            <div class="pattern-code relative milli island-1-2" style="">
+              <button class="center-contents-vertical pattern-tool-btn pattern-copy-btn absolute pin-tr" title="Copy code" aria-label="Copy code" data-clipboard-target="#banners-product-page-code-sample-copy-chunk" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+              <code><pre id="banners-product-page-code-sample-copy-chunk">&lt;div class="products-banner"&gt;
+  &lt;div class="grid">
+    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
+      &lt;div>
+        &lt;img class="img-flex" src="../../images/img-1.jpeg" aria-label="Image of girl in white sweater" alt="">
+      &lt;/div>
+      &lt;div class="grid pad-top-half">
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold">VANILLA SWEATER&lt;/p>
+        &lt;/div>
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold right">$32&lt;/p>
+        &lt;/div>
+      &lt;/div>
+    &lt;/div>
+
+    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
+      &lt;div>
+        &lt;img class="img-flex" src="../../images/img-2.jpeg" aria-label="Image of girl in BLUE sweater" alt="">
+      &lt;/div>
+      &lt;div class="grid pad-top-half">
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold">BLUE CHEESE SWEATER&lt;/p>
+        &lt;/div>
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold right">$45&#x2013;$79&lt;/p>
+        &lt;/div>
+      &lt;/div>
+    &lt;/div>
+
+    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
+      &lt;div>
+        &lt;img class="img-flex" src="../../images/img-1.jpeg" aria-label="Image of girl in white sweater" alt="">
+      &lt;/div>
+      &lt;div class="grid pad-top-half">
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold">VANILLA SWEATER&lt;/p>
+        &lt;/div>
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold right">$32&lt;/p>
+        &lt;/div>
+      &lt;/div>
+    &lt;/div>
+  &lt;/div>
+  &lt;div>&lt;/div>
 &lt;/div>
 </pre></code>
             </div>
