--- a/index.html
+++ b/index.html
@@ -812,13 +812,13 @@
     &lt;h3 class="absolute collection-text">Cheese collection&lt;/h3>
     &lt;div class="collection-img">
       &lt;div class="absolute gutter embed embed-2by3">
-        &lt;img class="img-flex embed-item" src="../../images/img-1.jpeg">
+        &lt;img class="img-flex embed-item" src="../../images/img-1.jpg">
       &lt;/div>
       &lt;div class="absolute gutter embed embed-2by3">
-        &lt;img class="img-flex embed-item" src="../../images/img-2.jpeg">
+        &lt;img class="img-flex embed-item" src="../../images/img-2.jpg">
       &lt;/div>
       &lt;div class="absolute gutter embed embed-2by3">
-        &lt;img class="img-flex embed-item" src="../../images/img-1.jpeg">
+        &lt;img class="img-flex embed-item" src="../../images/img-1.jpg">
       &lt;/div>
     &lt;/div>
   &lt;/div>
@@ -886,8 +886,7 @@
               <code><pre id="banners-main-banners-code-sample-copy-chunk">&lt;div class="home-banner" href="#"&gt;
   &lt;div class="main-img">
     &lt;h1 class="text-s text-m text-l">Think food.&lt;/h1>
-    &lt;img class="img-flex" src="../../images/banner.jpg">
-
+    &lt;img class="img-flex" src="../../images/banner.jpg" aria-label="Image of a girl in red graphic t-shirt that reads Tomato soup" alt="">
   &lt;/div>
   &lt;p class="l-home-banner-text gutter giga pad-top bold">JUNK TRUNK is a quirky clothing store for the foodies amongst us. Wear your favourite dish. &lt;/p>
 &lt;/div>
@@ -955,7 +954,7 @@
   &lt;div class="grid">
     &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
       &lt;div>
-        &lt;img class="img-flex" src="../../images/img-1.jpeg" aria-label="Image of girl in white sweater" alt="">
+        &lt;img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
       &lt;/div>
       &lt;div class="grid pad-top-half">
         &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
@@ -969,7 +968,7 @@
 
     &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
       &lt;div>
-        &lt;img class="img-flex" src="../../images/img-2.jpeg" aria-label="Image of girl in BLUE sweater" alt="">
+        &lt;img class="img-flex" src="../../images/img-2.jpg" aria-label="Image of girl in BLUE sweater" alt="">
       &lt;/div>
       &lt;div class="grid pad-top-half">
         &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
@@ -983,7 +982,7 @@
 
     &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
       &lt;div>
-        &lt;img class="img-flex" src="../../images/img-1.jpeg" aria-label="Image of girl in white sweater" alt="">
+        &lt;img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
       &lt;/div>
       &lt;div class="grid pad-top-half">
         &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
@@ -1449,7 +1448,7 @@
           &lt;h5>SUMMARY&lt;/h5>
           &lt;div class="grid">
             &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-              &lt;img class="icon i-64" src="../../images/img-2.jpeg" aria-label="Image of a sky blue sweater" alt="">
+              &lt;img class="icon i-64" src="../../images/img-2.jpg" aria-label="Image of a sky blue sweater" alt="">
             &lt;/div>
             &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2 gutter">
               &lt;p class="micro bold push-quarter">BLUE CHEESE SWEATER&lt;/p>
