--- a/patterns/banners/collections-banner.html
+++ b/patterns/banners/collections-banner.html
@@ -18,13 +18,13 @@
       <h3 class="absolute collection-text">Cheese collection</h3>
       <div class="collection-img">
         <div class="absolute gutter embed embed-2by3">
-          <img class="img-flex embed-item" src="../../images/img-1.jpeg">
+          <img class="img-flex embed-item" src="../../images/img-1.jpg">
         </div>
         <div class="absolute gutter embed embed-2by3">
-          <img class="img-flex embed-item" src="../../images/img-2.jpeg">
+          <img class="img-flex embed-item" src="../../images/img-2.jpg">
         </div>
         <div class="absolute gutter embed embed-2by3">
-          <img class="img-flex embed-item" src="../../images/img-1.jpeg">
+          <img class="img-flex embed-item" src="../../images/img-1.jpg">
         </div>
     </div>
   </div>
