--- a/patterns/banners/main-banners.html
+++ b/patterns/banners/main-banners.html
@@ -16,8 +16,7 @@
   <div class="home-banner" href="#">
     <div class="main-img">
       <h1 class="text-s text-m text-l">Think food.</h1>
-      <img class="img-flex" src="../../images/banner.jpg">
-
+      <img class="img-flex" src="../../images/banner.jpg" aria-label="Image of a girl in red graphic t-shirt that reads Tomato soup" alt="">
     </div>
     <p class="l-home-banner-text gutter giga pad-top bold">JUNK TRUNK is a quirky clothing store for the foodies amongst us. Wear your favourite dish. </p>
   </div>
