--- a/patterns/banners/product-page.html
+++ b/patterns/banners/product-page.html
@@ -18,7 +18,7 @@
     <div class="grid">
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
         <div>
-          <img class="img-flex" src="../../images/img-1.jpeg" aria-label="Image of girl in white sweater" alt="">
+          <img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
@@ -32,7 +32,7 @@
 
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
         <div>
-          <img class="img-flex" src="../../images/img-2.jpeg" aria-label="Image of girl in BLUE sweater" alt="">
+          <img class="img-flex" src="../../images/img-2.jpg" aria-label="Image of girl in BLUE sweater" alt="">
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
@@ -46,7 +46,7 @@
 
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
         <div>
-          <img class="img-flex" src="../../images/img-1.jpeg" aria-label="Image of girl in white sweater" alt="">
+          <img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
