--- a/patterns/forms/forms.html
+++ b/patterns/forms/forms.html
@@ -319,7 +319,7 @@
             <h5>SUMMARY</h5>
             <div class="grid">
               <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-                <img class="icon i-64" src="../../images/img-2.jpeg" aria-label="Image of a sky blue sweater" alt="">
+                <img class="icon i-64" src="../../images/img-2.jpg" aria-label="Image of a sky blue sweater" alt="">
               </div>
               <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2 gutter">
                 <p class="micro bold push-quarter">BLUE CHEESE SWEATER</p>
