Make a few design changes
Main banner collection was changed

--- a/patterns/forms/forms.html
+++ b/patterns/forms/forms.html
@@ -17,7 +17,7 @@
 <body>
 
   <form class="max-length island" method="post" action="#" novalidate>
-    <div class="log-in">
+    <section class="log-in">
       <div class="grid">
         <div class="unit xs-1 s-1 m-1 l-1-2 island push">
           <h5>RETURNING CUSTOMER?</h5>
@@ -72,7 +72,7 @@
           <a class="btn push-1-2 milli bold" href="#">CREATE AN ACCOUNT</a>
         </div>
       </div>
-    </div>
+    </section>
 
     <div class="payment-details">
       <h5 class="gutter push-none">CHECKOUT</h5>
@@ -234,7 +234,7 @@
           </p>
 
 
-          <div class="billing">
+          <section class="billing">
             <div class="push-1-2">
               <label for="name">Name</label>
               <input type="name" id="name" placeholder="John Smith" required aria-describedby="name-error">
@@ -310,12 +310,12 @@
               </p>
             </div>
 
-          </div>
+          </section>
         </div>
 
         <div class="unit xs-1 s-1 m-1 l-1-2 island push">
 
-          <div class="summary">
+          <section class="summary">
             <h5>SUMMARY</h5>
             <div class="grid">
               <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
@@ -331,7 +331,7 @@
 
             </div>
             <a class="btn push-1-2 milli bold" href="#">PAY &amp; PROCEED</a>
-          </div>
+          </section>
 
         </div>
       </div>
