--- a/index.html
+++ b/index.html
@@ -758,6 +758,10 @@
 <p>The main banners are to be used only in the homepage and helps create a visual impact for the brand and the website. It helps carry across the branding.</p>
 <p>Collection banner</p>
 <p>The collection banners weave a story for the viewers. A new collection, most trending collections can be communicated using this dynamic layout. Can be used on any page to represent collections, collaborations.</p>
+<p>Product collections banner</p>
+<p>The product collections banner are to be used only in the product collections page. The layout consists of cards that can be used to represent the collections in the e-commerce site.</p>
+<p>Products banner</p>
+<p>The Products banners are to be used in the product page. It consists of reviews, description and recommended section, to urge the users to buy more, and to provide a detailed description of the product.</p>
 </div>
     </div>
 
@@ -820,16 +824,18 @@
               </button>
               <code><pre id="banners-collections-banner-code-sample-copy-chunk">&lt;div class="l-collection-banner" href="#"&gt;
   &lt;div class="relative">
-    &lt;h3 class="absolute collection-text">Cheese collection&lt;/h3>
+    &lt;h2 class="absolute collection-text">Cheese collection&lt;/h2>
     &lt;div class="collection-img">
-      &lt;div class="absolute gutter embed embed-2by3">
-        &lt;img class="img-flex embed-item" src="../../images/img-1.jpg">
-      &lt;/div>
-      &lt;div class="absolute gutter embed embed-2by3">
-        &lt;img class="img-flex embed-item" src="../../images/img-2.jpg">
-      &lt;/div>
-      &lt;div class="absolute gutter embed embed-2by3">
-        &lt;img class="img-flex embed-item" src="../../images/img-1.jpg">
+      &lt;div class="grid">
+        &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 pad-top-double gutter-1-2">
+          &lt;img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of a girl in white sweater" alt="">
+        &lt;/div>
+        &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 pad-t-1-2 gutter-1-2">
+          &lt;img class="img-flex" src="../../images/img-2.jpg" aria-label="Image of a girl in blue sweater" alt="">
+        &lt;/div>
+        &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 pad-top gutter-1-2">
+          &lt;img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of a girl in white sweater" alt="">
+        &lt;/div>
       &lt;/div>
     &lt;/div>
   &lt;/div>
@@ -1469,7 +1475,7 @@
                 </i>
               </button>
               <code><pre id="forms-forms-code-sample-copy-chunk">&lt;form class="max-length island" method="post" action="#" novalidate=""&gt;
-  &lt;div class="log-in">
+  &lt;section class="log-in">
     &lt;div class="grid">
       &lt;div class="unit xs-1 s-1 m-1 l-1-2 island push">
         &lt;h5>RETURNING CUSTOMER?&lt;/h5>
@@ -1524,7 +1530,7 @@
         &lt;a class="btn push-1-2 milli bold" href="#">CREATE AN ACCOUNT&lt;/a>
       &lt;/div>
     &lt;/div>
-  &lt;/div>
+  &lt;/section>
 
   &lt;div class="payment-details">
     &lt;h5 class="gutter push-none">CHECKOUT&lt;/h5>
@@ -1686,7 +1692,7 @@
         &lt;/p>
 
 
-        &lt;div class="billing">
+        &lt;section class="billing">
           &lt;div class="push-1-2">
             &lt;label for="name">Name&lt;/label>
             &lt;input type="name" id="name" placeholder="John Smith" required aria-describedby="name-error">
@@ -1762,12 +1768,12 @@
             &lt;/p>
           &lt;/div>
 
-        &lt;/div>
+        &lt;/section>
       &lt;/div>
 
       &lt;div class="unit xs-1 s-1 m-1 l-1-2 island push">
 
-        &lt;div class="summary">
+        &lt;section class="summary">
           &lt;h5>SUMMARY&lt;/h5>
           &lt;div class="grid">
             &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
@@ -1783,7 +1789,7 @@
 
           &lt;/div>
           &lt;a class="btn push-1-2 milli bold" href="#">PAY &amp; PROCEED&lt;/a>
-        &lt;/div>
+        &lt;/section>
 
       &lt;/div>
     &lt;/div>
