--- a/patterns/banners/collections-banner.html
+++ b/patterns/banners/collections-banner.html
@@ -15,16 +15,18 @@
 
   <div class="l-collection-banner" href="#">
     <div class="relative">
-      <h3 class="absolute collection-text">Cheese collection</h3>
+      <h2 class="absolute collection-text">Cheese collection</h2>
       <div class="collection-img">
-        <div class="absolute gutter embed embed-2by3">
-          <img class="img-flex embed-item" src="../../images/img-1.jpg">
-        </div>
-        <div class="absolute gutter embed embed-2by3">
-          <img class="img-flex embed-item" src="../../images/img-2.jpg">
-        </div>
-        <div class="absolute gutter embed embed-2by3">
-          <img class="img-flex embed-item" src="../../images/img-1.jpg">
+        <div class="grid">
+          <div class="unit xs-1 s-1 m-1-2 l-1-3 pad-top-double gutter-1-2">
+            <img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of a girl in white sweater" alt="">
+          </div>
+          <div class="unit xs-1 s-1 m-1-2 l-1-3 pad-t-1-2 gutter-1-2">
+            <img class="img-flex" src="../../images/img-2.jpg" aria-label="Image of a girl in blue sweater" alt="">
+          </div>
+          <div class="unit xs-1 s-1 m-1-2 l-1-3 pad-top gutter-1-2">
+            <img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of a girl in white sweater" alt="">
+          </div>
         </div>
     </div>
   </div>
