--- a/patterns/banners/products-collections-page-banner.html
+++ b/patterns/banners/products-collections-page-banner.html
@@ -9,6 +9,8 @@
   <link href="../../common/grid.css" rel="stylesheet">
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
+  <link href="../cards/cards.css" rel="stylesheet">
+  <link href="../cards/basic-cards.html" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
   <link href="forms.css" rel="stylesheet">
 </head>
