Add a few changes

--- a/index.html
+++ b/index.html
@@ -1539,7 +1539,8 @@
             </ul>
         </div>
           <div class="pattern-desc milli island" style="">
-            <div class="max-length"><p>The date picker can be used for payment details, birthday information. Use date picker when you require the user to select/enter date.</p>
+            <div class="max-length"><p>The date picker can be used for payment details, birthday information.
+Use date picker when you require the user to select/enter date.</p>
 </div>
           </div>
 
@@ -1611,8 +1612,8 @@
             </ul>
         </div>
           <div class="pattern-desc milli island" style="">
-            <div class="max-length"><p>Dropdown menus are used to enable users to select an option from the list.</p>
-<p>It can be used for Province/Territory list, product options.</p>
+            <div class="max-length"><p>Dropdown menus are used to enable users to select an option from the list.
+It can be used for Province/Territory list, product options.</p>
 </div>
           </div>
 
